--- a/ClientManagement/appsettings.json
+++ b/ClientManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=ClientManagement;User ID=1;Password=mysql;Database=ClientManagement"
+  }
 }
