Added DbContext and change Program.cs. Still need work on that.

--- a/ClientManagement/appsettings.json
+++ b/ClientManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=ClientManagement;User ID=1;Password=mysql;Database=ClientManagement"
+    "Default": "Server=localhost;User ID=andre;Password=mysql;Database=ClientManagement"
   }
 }
